--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </main>
   <footer>
     <button id="themeToggle"><i class="bi bi-brightness-high"></i></button>
-    <p>Наш магазин &copy; 2024</p>
+    <p>Магазин Івана Линника &copy; 2024</p>
 
     <div class="attribution">
       Image by <a
