--- a/cart.html
+++ b/cart.html
@@ -142,6 +142,18 @@
       </div>
     </div>
   </div>
+  <footer>
+    <button id="themeToggle"><i class="bi bi-brightness-high"></i></button>
+    <p>Logika IT School &copy; 2024</p>
+    <p>Релізний проєкт Ім'я Прізвище</p>
+
+    <div class="attribution">
+      Image by <a
+        href="https://www.freepik.com/free-photo/top-view-smartphone-with-keyboard-charger_26211576.htm#query=gadgets&position=6&from_view=search&track=sph&uuid=a96e5504-171e-4b86-aa38-9be26d27f16e">Freepik</a>
+      Image by <a
+        href="https://www.freepik.com/free-photo/high-angle-smartphone-desk-with-headphones_26211747.htm#from_view=detail_serie">Freepik</a>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
   <script src="js/script.js"></script>
