--- a/cart.html
+++ b/cart.html
@@ -15,49 +15,46 @@
 <body>
   <!-- Тіло: увесь вміст сторінки -->
   <!-- Тіло: увесь вміст сторінки -->
-  <header class="container fixed">
-    <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html"><img class='logo' src='img/logo_white.png' height="50px" alt='logo'></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class='nav-link' href='index.html#products'>Товари</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href='index.html#about'>Про нас</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href='#support' class="btn btn-primary" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">Підтримка</a>
-            </li>
-          </ul>
-          <form id="searchForm" class="d-flex mx-auto" role="search">
-            <input class="form-control me-2" type="search" placeholder="Пошук" aria-label="Search">
-            <button class="btn btn-outline-secondary btn-search" type="submit">Знайти</button>
-          </form>
-          <button class="cart-btn" id="cartBtn">
-            Кошик
-            <svg xmlns="http://www.w3.org/2000/svg" class="bell" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-shopping-cart">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-              <path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-              <path d="M17 17h-11v-14h-2" />
-              <path d="M6 5l14 1l-1 7h-13" />
-            </svg>
-            <span class="cart-counter">0</span>
-        </li>
-        </button>
+  <header class="fixed">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img class="logo" src="img/logo_white.png" alt="Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#products">Товари</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#about">Про нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn-support" href="#support" data-bs-toggle="modal" data-bs-target="#exampleModal">Підтримка</a>
+                    </li>
+                </ul>
+                <form id="searchForm" class="d-flex ms-3">
+                    <input class="form-control me-2" type="search" placeholder="Пошук" aria-label="Search">
+                    <button class="btn btn-outline-light" type="submit">Знайти</button>
+                </form>
+                <button class="btn cart-btn ms-3" id="cartBtn">
+                    Кошик
+                    <svg xmlns="http://www.w3.org/2000/svg" class="bell" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                        <path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                        <path d="M17 17h-11v-14h-2" />
+                        <path d="M6 5l14 1l-1 7h-13" />
+                    </svg>
+                    <span class="cart-counter">0</span>
+                </button>
+            </div>
         </div>
-      </div>
     </nav>
-  </header>
+</header>
   <main class="container cart-page">
 
     <section class="cart py-4">
@@ -144,8 +141,7 @@
   </div>
   <footer>
     <button id="themeToggle"><i class="bi bi-brightness-high"></i></button>
-    <p>Logika IT School &copy; 2024</p>
-    <p>Релізний проєкт Ім'я Прізвище</p>
+    <p>Магазин Івана Линника &copy; 2024</p>
 
     <div class="attribution">
       Image by <a
